din greseala am pus o varianta care nu se compila mai devreme; incepusem sa refactorizez codul

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 documentation/ms/implementare_liceu.ms
+documentation/ms/implementare_detalii_liceu.ms
+documentation/pdf/implementare_detalii_liceu.pdf
+pseudocod
+tags
 
