--- a/documentation/ms/Makefile
+++ b/documentation/ms/Makefile
@@ -1,4 +1,10 @@
-default:
+build:
 	groff -ms implementare.ms -p -s -T ps > implementare.ps
 	ps2pdf implementare.ps implementare.pdf
-	zathura implementare.pdf
+
+clean:
+	rm implementare.ps implementare.pdf
+
+default: build
+	mupdf implementare.pdf
+
